--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -149,7 +149,10 @@ body {
     }
   }
   .form-btn {
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
+  }
+  .form-btn-red {
+    width: 100%;
   }
 }
 
@@ -414,7 +417,7 @@ body {
   justify-content: space-between;
   min-height: calc(100vh - 100px);
   .add {
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
   }
   .active {
     margin-bottom: 20px;
@@ -440,6 +443,9 @@ body {
     display: flex;
     align-items: center;
   }
+  .form-btn-red {
+    width: 100%;
+  }
 }
 
 // tasting-show
@@ -449,7 +455,7 @@ body {
   justify-content: space-between;
   min-height: calc(100vh - 100px);
   .form-btn {
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
   }
   .header {
     font-weight: 700;
@@ -701,7 +707,7 @@ input[type="range"]::-webkit-slider-thumb {
     width: 100%;
     text-align: center;
     text-transform: uppercase;
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
   }
 }
 
