add time zone to dates

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -701,10 +701,9 @@ input[type="range"]::-webkit-slider-thumb {
     border-radius: 3px;
     text-decoration: none;
     padding: 19px;
-    width: 100%;
+    width: 476px;
     text-align: center;
     text-transform: uppercase;
-    // margin-bottom: 30px;
   }
 }
 
